# computercraft

./: .gitignore  .luarc.json  Cargo.toml  LICENSE  README.md  justfile  shaft_miner.lua  std.lua  stylua.toml  tree_farm.lua  tunnel_miner.lua  wheat_farmer.lua
.zed/: settings.json
crates/computercraft_simulator/: Cargo.toml
crates/computercraft_simulator/examples/: basic_turtle.rs
crates/computercraft_simulator/src/: lib.rs  simulator.rs  turtle.rs
crates/computercraft_tests/: Cargo.toml
crates/computercraft_tests/src/: lib.rs  setup.rs  tests.rs
crates/computercraft_tests/src/tests/: lib_move_tests.rs  shaft_miner_tests.rs  wheat_farmer_tests.rs
crates/minecraft/: Cargo.toml
crates/minecraft/src/: block.rs  blocks.rs  item.rs  lib.rs  world.rs
lib/: inventory.lua  move.lua
programs/: cobblestone_miner.lua  cylinder_builder.lua  debug_block.lua  shaft_miner.lua  tunnel_miner.lua  wheat_farmer.lua
