[package]
name = "computercraft_simulator"
version = "0.1.0"
publish = false
edition = "2024"

[dependencies]
minecraft.workspace = true
mlua = { workspace = true, features = ["lua52", "serialize", "vendored"] }
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
